# sc-graph-rag

./: .gitignore  Pipfile  README.md  analyzer.py  blogpost.txt  example_graphrag.py  graphrag_example.py  graphrag_implementation.py  graphrag_pipeline.py  main.py  pipeline.py  product_catalog.csv  pyproject.toml  settings.yaml
company_documents/marketing/: product_comparison.txt
company_documents/products/: healthcare_products_overview.txt
company_documents/support/: product_faq.txt
input/: enterprise_solutions_overview.txt  wellness_products_overview.txt
