[project]
name = "graphrag-example"
version = "0.1.0"
description = "GraphRAG implementation example for a healthcare product catalog"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "pandas",
    "networkx",
    "matplotlib",
    "numpy",
    "graphrag>=3.0,<4",
]

[tool.uv]
# graphrag pins pyarrow~=22.0, but pyarrow <23.0.1 has a high-severity
# use-after-free (GHSA-rgxp-2hwp-jwgg). Override the pin to the patched release.
override-dependencies = ["pyarrow>=23.0.1,<24"]
